turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:25: error: not found: value x
x=getX();y=getY()
^Source:25: error: not found: value y
x=getX();y=getY()
         ^Source:30: error: not found: value x
setPos(x,y)
       ^